gcc/testsuite/rust/rustc/ui/feature-gate-isa_attribute.rs
#[instruction_set]
// { dg-error ".E0778." "" { target *-*-* } .-1 }
// { dg-error ".E0778." "" { target *-*-* } .-2 }
// { dg-error ".E0778." "" { target *-*-* } .-3 }
fn main() {
}

